--- a/src/styles/theme.default.css
+++ b/src/styles/theme.default.css
@@ -17,6 +17,7 @@
   --color-background-input: white;
   --color-background-footer: #004a8a;
   --color-footer-link: #0080ff;
+  --color-footer-text-color: #0080ff;
   --color-input-placeholder: #7d7b7a;
   --color-listitem-hover: #f5f7f9;
   --color-listitem-active: #e4f0ff;
